Releng: update jdt.core to I20160426-1045 (warmup towards M7)